# Cosc363

./: CMakeCache.txt  CMakeLists.txt  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Makefile  Plane.cpp  README.md  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.out  SceneObject.cpp  SceneObject.h  Sphere.cpp  TextureBMP.cpp  cmake_install.cmake
